# openapi.json
@@ -13,14 +13,6 @@
       "post" : {
         "tags" : [ "internal-wallet-controller" ],
         "operationId" : "createWallet",
-        "parameters" : [ {
-          "name" : "X-Calling-Service",
-          "in" : "header",
-          "required" : false,
-          "schema" : {
-            "type" : "string"
-          }
-        } ],
         "requestBody" : {
           "content" : {
             "application/json" : {
@@ -64,13 +56,6 @@
           "schema" : {
             "type" : "string",
             "format" : "uuid"
-          }
-        }, {
-          "name" : "X-Calling-Service",
-          "in" : "header",
-          "required" : false,
-          "schema" : {
-            "type" : "string"
           }
         } ],
         "requestBody" : {
@@ -117,13 +102,6 @@
             "type" : "string",
             "format" : "uuid"
           }
-        }, {
-          "name" : "X-Calling-Service",
-          "in" : "header",
-          "required" : false,
-          "schema" : {
-            "type" : "string"
-          }
         } ],
         "requestBody" : {
           "content" : {
@@ -142,6 +120,50 @@
               "application/json" : {
                 "schema" : {
                   "$ref" : "#/components/schemas/WalletDto"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/internal/advertisers/{advertiserId}/wallet/topups" : {
+      "post" : {
+        "tags" : [ "wallet-topup-controller" ],
+        "operationId" : "topupWallet",
+        "parameters" : [ {
+          "name" : "advertiserId",
+          "in" : "path",
+          "required" : true,
+          "schema" : {
+            "type" : "string",
+            "format" : "uuid"
+          }
+        }, {
+          "name" : "Idempotency-Key",
+          "in" : "header",
+          "required" : true,
+          "schema" : {
+            "type" : "string"
+          }
+        } ],
+        "requestBody" : {
+          "content" : {
+            "application/json" : {
+              "schema" : {
+                "$ref" : "#/components/schemas/TopupWalletRequest"
+              }
+            }
+          },
+          "required" : true
+        },
+        "responses" : {
+          "200" : {
+            "description" : "OK",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/ApiResponseMapStringString"
                 }
               }
             }
@@ -222,53 +244,9 @@
         }
       }
     },
-    "/api/v1/advertisers/{advertiserId}/wallet/topups" : {
-      "post" : {
-        "tags" : [ "wallet-topup-controller" ],
-        "operationId" : "topupWallet",
-        "parameters" : [ {
-          "name" : "advertiserId",
-          "in" : "path",
-          "required" : true,
-          "schema" : {
-            "type" : "string",
-            "format" : "uuid"
-          }
-        }, {
-          "name" : "Idempotency-Key",
-          "in" : "header",
-          "required" : true,
-          "schema" : {
-            "type" : "string"
-          }
-        } ],
-        "requestBody" : {
-          "content" : {
-            "application/json" : {
-              "schema" : {
-                "$ref" : "#/components/schemas/TopupWalletRequest"
-              }
-            }
-          },
-          "required" : true
-        },
-        "responses" : {
-          "200" : {
-            "description" : "OK",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/ApiResponseMapStringString"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/api/v1/wallets/{entityType}/{entityId}" : {
+    "/api/v1/internal/wallets/{entityType}/{entityId}" : {
       "get" : {
-        "tags" : [ "wallet-controller" ],
+        "tags" : [ "internal-wallet-controller" ],
         "operationId" : "getWallet",
         "parameters" : [ {
           "name" : "entityType",
@@ -286,13 +264,6 @@
             "type" : "string",
             "format" : "uuid"
           }
-        }, {
-          "name" : "X-User-Id",
-          "in" : "header",
-          "required" : false,
-          "schema" : {
-            "type" : "string"
-          }
         } ],
         "responses" : {
           "200" : {
@@ -308,9 +279,9 @@
         }
       }
     },
-    "/api/v1/wallets/{entityType}/{entityId}/transactions" : {
+    "/api/v1/internal/wallets/{entityType}/{entityId}/transactions" : {
       "get" : {
-        "tags" : [ "wallet-controller" ],
+        "tags" : [ "internal-wallet-controller" ],
         "operationId" : "getTransactions",
         "parameters" : [ {
           "name" : "entityType",
@@ -327,13 +298,6 @@
           "schema" : {
             "type" : "string",
             "format" : "uuid"
-          }
-        }, {
-          "name" : "X-User-Id",
-          "in" : "header",
-          "required" : false,
-          "schema" : {
-            "type" : "string"
           }
         }, {
           "name" : "page",
@@ -468,28 +432,6 @@
           }
         }
       },
-      "ApiResponseString" : {
-        "required" : [ "message", "success", "timestamp" ],
-        "type" : "object",
-        "properties" : {
-          "success" : {
-            "type" : "boolean"
-          },
-          "message" : {
-            "type" : "string"
-          },
-          "errorCode" : {
-            "type" : "string"
-          },
-          "data" : {
-            "type" : "string"
-          },
-          "timestamp" : {
-            "type" : "string",
-            "format" : "date-time"
-          }
-        }
-      },
       "TopupWalletRequest" : {
         "required" : [ "amount" ],
         "type" : "object",
@@ -522,6 +464,28 @@
             "additionalProperties" : {
               "type" : "string"
             }
+          },
+          "timestamp" : {
+            "type" : "string",
+            "format" : "date-time"
+          }
+        }
+      },
+      "ApiResponseString" : {
+        "required" : [ "message", "success", "timestamp" ],
+        "type" : "object",
+        "properties" : {
+          "success" : {
+            "type" : "boolean"
+          },
+          "message" : {
+            "type" : "string"
+          },
+          "errorCode" : {
+            "type" : "string"
+          },
+          "data" : {
+            "type" : "string"
           },
           "timestamp" : {
             "type" : "string",
@@ -565,11 +529,11 @@
           "last" : {
             "type" : "boolean"
           },
-          "sort" : {
-            "$ref" : "#/components/schemas/SortObject"
-          },
           "pageable" : {
             "$ref" : "#/components/schemas/PageableObject"
+          },
+          "sort" : {
+            "$ref" : "#/components/schemas/SortObject"
           },
           "empty" : {
             "type" : "boolean"
@@ -584,12 +548,6 @@
             "type" : "integer",
             "format" : "int64"
           },
-          "sort" : {
-            "$ref" : "#/components/schemas/SortObject"
-          },
-          "unpaged" : {
-            "type" : "boolean"
-          },
           "paged" : {
             "type" : "boolean"
           },
@@ -600,6 +558,12 @@
           "pageSize" : {
             "type" : "integer",
             "format" : "int32"
+          },
+          "sort" : {
+            "$ref" : "#/components/schemas/SortObject"
+          },
+          "unpaged" : {
+            "type" : "boolean"
           }
         }
       },
@@ -737,11 +701,11 @@
           "last" : {
             "type" : "boolean"
           },
-          "sort" : {
-            "$ref" : "#/components/schemas/SortObject"
-          },
           "pageable" : {
             "$ref" : "#/components/schemas/PageableObject"
+          },
+          "sort" : {
+            "$ref" : "#/components/schemas/SortObject"
           },
           "empty" : {
             "type" : "boolean"
